--- a/Qms_v3/templates/manager_base.html
+++ b/Qms_v3/templates/manager_base.html
@@ -186,6 +186,12 @@
               <div class="menu_section">
                 <ul class="nav side-menu">
                   <li><a href="/manager-dashboard"><i class="fa fa-home"></i> Dashboard</a></li>
+                  <li><a><i class="fa fa-sitemap"></i>QA Mapping <span class="fa fa-chevron-down"></span></a>
+                    <ul class="nav child_menu">
+                      <li><a href="/add-qa-mapping">Add Mapping</a></li>
+                      <li><a href="/view-qa-mapping">View Mapping</a></li>
+                    </ul>
+                  </li>
                   <li><a href="/manager-reports/all"><i class="fa fa-database"></i> All Audits</a></li>
                   <li><a href="/manager-reports/open"><i class="fa fa-pencil"></i> Open Audits</a></li>
                   <li><a href="/manager-reports/dispute"><i class="fa fa-times"></i> Dispute Audits</a></li>
