--- a/Qms_v3/templates/add_campaign.html
+++ b/Qms_v3/templates/add_campaign.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block main %}
 
-        <!-- page content -->
+        <!-- page content --><!--Test-->
         <div class="right_col" role="main">
           <div class="row">
             <div class="col-md-12">
