--- a/Qms_v3/templates/manager_dashboard.html
+++ b/Qms_v3/templates/manager_dashboard.html
@@ -163,7 +163,7 @@
                                 <option value="" selected disabled>Please Select</option>
                                 <option value="all">All</option>
                                 {% for i in campaigns %}
-                                <option value="{{i.id}}">{{i.name}} ({{i.type}})</option>
+                                <option value="{{i.id}}">{{i.name}} ({{i.name}})</option>
                                 {% endfor %}
                               </select>
                             </div>
@@ -283,7 +283,7 @@
                               <select required class="form-control select2" name="campaign" id="export_campaign">
                                 <option value="" selected disabled>Please Select</option>
                                 {% for i in campaigns %}
-                                <option value="{{i.name}}">{{i.name}}</option>
+                                <option value="{{i.id}}">{{i.name}} ({{i.type}})</option>
                                 {% endfor %}
                               </select>
                             </div>
