--- a/Qms_v3/templates/form/Fame.html
+++ b/Qms_v3/templates/form/Fame.html
@@ -706,8 +706,7 @@
                             </div>
                         </div>
                     </div>
-                    <input type="hidden" name="campaign_name" value="{{campaign.name}}">
-                    <input type="hidden" name="campaign_type" value="{{campaign.type}}">
+                     <input type="hidden" name="campaign_id" value="{{campaign.id}}">
                     <input type="hidden" name="start_time" value="{{start_time}}">
                 </form>
             </div>
