--- a/Qms_v3/templates/manager_base.html
+++ b/Qms_v3/templates/manager_base.html
@@ -185,7 +185,7 @@
             <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
               <div class="menu_section">
                 <ul class="nav side-menu">
-                  <li><a href="/manager-dashboard"><i class="fa fa-home"></i> Dashboard</a></li>
+                  <li><a href="/dashboard"><i class="fa fa-home"></i> Dashboard</a></li>
                   <li><a><i class="fa fa-sitemap"></i>QA Mapping <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="/add-qa-mapping">Add Mapping</a></li>
@@ -205,7 +205,7 @@
 
             <!-- /menu footer buttons -->
             <div class="sidebar-footer hidden-small">
-              <a data-toggle="tooltip" data-placement="top" title="Logout" href="/">
+              <a data-toggle="tooltip" data-placement="top" title="Logout" href="/logout">
                 <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
               </a>
             </div>
@@ -227,7 +227,7 @@
                     <img src="{% static 'assets/images/img.jpg' %}" alt=""> {{request.user.profile.emp_name}}
                   </a>
                   <div class="dropdown-menu dropdown-usermenu pull-right" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item"  href="/"><i class="fa fa-sign-out pull-right"></i> Log Out</a>
+                    <a class="dropdown-item"  href="/logout"><i class="fa fa-sign-out pull-right"></i> Log Out</a>
                   </div>
                 </li>
                 <li style="margin-top:5px !important;">
