--- a/Qms_v3/templates/qa_dashboard.html
+++ b/Qms_v3/templates/qa_dashboard.html
@@ -35,9 +35,6 @@
     }
     .campaigns {
     }
-
-
-
   </style>
 {% endblock %}
 
@@ -47,7 +44,7 @@
           <div class="row mb-5">
             <div class="col-md-12">
               <div class="row">
-                <div class="col-md-3 campaigns">
+                <div class="col-md-3 campaigns mt-3">
                   <form action="/form" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="inside">
@@ -70,7 +67,7 @@
                     </div>
                   </form>
                 </div>
-                <div class="col-md-3 campaigns">
+                <div class="col-md-3 campaigns mt-3">
                   <div class="inside inside_inbound">
                   <form action="/form" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
@@ -93,7 +90,7 @@
                     </form>
                   </div>
                 </div>
-                <div class="col-md-3 campaigns">
+                <div class="col-md-3 campaigns mt-3">
                   <div class="inside inside_email">
                     <form action="/form" method="post" enctype="multipart/form-data">
                       {% csrf_token %}
@@ -116,7 +113,7 @@
                     </form>
                   </div>
                 </div>
-                <div class="col-md-3 campaigns">
+                <div class="col-md-3 campaigns mt-3">
                   <div class="inside inside_other">
                     <form action="/form" method="post" enctype="multipart/form-data">
                       {% csrf_token %}
