--- a/Qms_v3/templates/form/Amerisave.html
+++ b/Qms_v3/templates/form/Amerisave.html
@@ -331,8 +331,8 @@
                                 </div>
                             </div>
                             <div class="col-md-12 mt-5" align="center">
-                                <button class="btn btn-lg btn-info" onclick="full_score(this)" data-toggle="modal" data-target="#viewscore">View Score</button>
-                                <button class="btn btn-lg btn-success" onclick="confirm('Are you sure you want to continue?');" type="submit">Submit</button>
+                                <button type="button" class="btn btn-lg btn-info" onclick="full_score(this)" data-toggle="modal" data-target="#viewscore">View Score</button>
+                                <button class="btn btn-lg btn-success">Submit</button>
                             </div>
                         </div>
                     </div>
