--- a/Qms_v3/templates/manager_base.html
+++ b/Qms_v3/templates/manager_base.html
@@ -196,6 +196,9 @@
                   <li><a href="/manager-reports/open"><i class="fa fa-pencil"></i> Open Audits</a></li>
                   <li><a href="/manager-reports/dispute"><i class="fa fa-times"></i> Dispute Audits</a></li>
                   <li><a href="/add-user"><i class="fa fa-user"></i>Add User</a></li>
+                  {% if request.user.profile.emp_id == '1234' or request.user.profile.emp_id == '5670' or request.user.profile.emp_id == '5533' or request.user.profile.emp_id == '8413' %}
+                  <li><a href="/password-reset"><i class="fa fa-lock"></i> Employee Password Reset</a></li>
+                  {% endif %}
                   <li><a href="/settings"><i class="fa fa-gear"></i> Settings</a></li>
                 </ul>
               </div>
