--- a/Qms_v3/templates/agent/Spoiled.html
+++ b/Qms_v3/templates/agent/Spoiled.html
@@ -17,7 +17,7 @@
                         </div>
                         <div class="col-md-12" style="display: inline-flex;">
                             <h1>Result: </h1>
-                            <h1 id="result"></h1>
+                            <h1 id="result"></h1><span class="pt-4">(Threshold: {{campaign.threshold}}%)</span>
                         </div>
                     </div>
                 </div>
@@ -390,13 +390,14 @@
     var t_3 = parseInt($('#t_3').html());
     $('#t_score').html(t_1+t_2+t_3);
 
+
     var total = parseInt($('#tot_score').html());
-    if (total <= 99) {
-        $('#result').html("Fail");
-        $('#result').css("color","red");
-    } else {
-        $('#result').html("Pass");
-        $('#result').css("color","green");
-    }
+        if (total < {{campaign.threshold}}) {
+            $('#result').html("Fail");
+            $('#result').css("color","red");
+        } else {
+            $('#result').html("Pass");
+            $('#result').css("color","green");
+        }
 </script>
 {% endblock %}
