--- a/Qms_v3/templates/add_campaign.html
+++ b/Qms_v3/templates/add_campaign.html
@@ -36,6 +36,14 @@
                         </div>
                         <div class="row">
                             <div class="col-md-4"></div>
+                            <div class="col-md-4 mt-2 form-group">
+                                <label for="passing">Passing Score</label>
+                                <input type="number" max=100 min=10 required id="passing" name="passing" class="form-control">
+                            </div>
+                            <div class="col-md-4"></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4"></div>
                             <div class="col-md-4 pt-2 mt-4 form-group">
                                 <button class="form-control btn btn-success">Submit</button>
                             </div>
