--- a/Qms_v3/templates/agent/Amerisave.html
+++ b/Qms_v3/templates/agent/Amerisave.html
@@ -17,7 +17,7 @@
                         </div>
                         <div class="col-md-12" style="display: inline-flex;">
                             <h1>Result: </h1>
-                            <h1 id="result"></h1>
+                            <h1 id="result"></h1><span class="pt-4">(Threshold: {{campaign.threshold}}%)</span>
                         </div>
                     </div>
                 </div>
@@ -366,13 +366,14 @@
 
 {% block scripts %}
 <script type="text/javascript">
-    var total = parseInt($('#tot_score').html());
-    if (total <= 99) {
-        $('#result').html("Fail");
-        $('#result').css("color","red");
-    } else {
-        $('#result').html("Pass");
-        $('#result').css("color","green");
-    }
+
+        var total = parseInt($('#tot_score').html());
+        if (total < {{campaign.threshold}}) {
+            $('#result').html("Fail");
+            $('#result').css("color","red");
+        } else {
+            $('#result').html("Pass");
+            $('#result').css("color","green");
+        }
 </script>
 {% endblock %}
