--- a/Qms_v3/templates/agent/Fame.html
+++ b/Qms_v3/templates/agent/Fame.html
@@ -17,7 +17,7 @@
                                 </div>
                                 <div class="col-md-12" style="display: inline-flex;">
                                     <h1>Result: </h1>
-                                    <h1 id="result"></h1>
+                                    <h1 id="result"></h1><span class="pt-4">(Threshold: {{campaign.threshold}}%)</span>
                                 </div>
                             </div>
                         </div>
