--- a/Qms_v3/templates/agent/ILM.html
+++ b/Qms_v3/templates/agent/ILM.html
@@ -17,7 +17,7 @@
                                 </div>
                                 <div class="col-md-12" style="display: inline-flex;">
                                     <h1>Result: </h1>
-                                    <h1 id="result"></h1>
+                                    <h1 id="result"></h1><span class="pt-4">(Threshold: {{campaign.threshold}}%)</span>
                                 </div>
                             </div>
                         </div>
@@ -388,13 +388,14 @@
     var c_2 = parseInt($('#c_2').html());
     var c_3 = parseInt($('#c_3').html());
     $('#c_score').html(c_1+c_2+c_3);
-    var total = parseInt($('#tot_score').html());
-    if (total <= 99) {
-        $('#result').html("Fail");
-        $('#result').css("color","red");
-    } else {
-        $('#result').html("Pass");
-        $('#result').css("color","green");
-    }
+
+        var total = parseInt($('#tot_score').html());
+        if (total < {{campaign.threshold}}) {
+            $('#result').html("Fail");
+            $('#result').css("color","red");
+        } else {
+            $('#result').html("Pass");
+            $('#result').css("color","green");
+        }
 </script>
 {% endblock %}
