--- a/Qms_v3/templates/agent/Outbound.html
+++ b/Qms_v3/templates/agent/Outbound.html
@@ -17,7 +17,7 @@
                                 </div>
                                 <div class="col-md-12" style="display: inline-flex;">
                                     <h1>Result: </h1>
-                                    <h1 id="result"></h1>
+                                    <h1 id="result"></h1><span class="pt-4">(Threshold: {{campaign.threshold}}%)</span>
                                 </div>
                             </div>
                         </div>
@@ -432,8 +432,9 @@
         var b_5 = parseInt($('#b_5').html());
         var b_6 = parseInt($('#b_6').html());
         $('#b_score').html(b_1+b_2+b_3+b_4+b_5+b_6);
+
         var total = parseInt($('#tot_score').html());
-        if (total <= 99) {
+        if (total < {{campaign.threshold}}) {
             $('#result').html("Fail");
             $('#result').css("color","red");
         } else {
