--- a/Qms_v3/templates/report/Amerisave.html
+++ b/Qms_v3/templates/report/Amerisave.html
@@ -15,6 +15,10 @@
                         <div class="col-md-12" align="center">
                             <h1>Audit Report - {{form.campaign}} ({{form.type}})</h1>
                         </div>
+                        <div class="col-md-12" style="display: inline-flex;">
+                            <h1>Result: </h1>
+                            <h1 id="result"></h1><span class="pt-4">(Threshold: {{campaign.threshold}}%)</span>
+                        </div>
                     </div>
                 </div>
 
@@ -332,5 +336,17 @@
         </div>
     </div>
 </div>
-    
+
+{% endblock %}
+{% block scripts %}
+<script type="text/javascript">
+    var total = parseInt($('#tot_score').html());
+        if (total < {{campaign.threshold}}) {
+            $('#result').html("Fail");
+            $('#result').css("color","red");
+        } else {
+            $('#result').html("Pass");
+            $('#result').css("color","green");
+        }
+</script>
 {% endblock %}
