--- a/Qms_v3/templates/report/Outbound.html
+++ b/Qms_v3/templates/report/Outbound.html
@@ -15,6 +15,10 @@
                                 <div class="col-md-12" align="center">
                                     <h1>Audit Report - {{form.campaign}} ({{form.campaign_type}})</h1>
                                 </div>
+                                <div class="col-md-12" style="display: inline-flex;">
+                                    <h1>Result: </h1>
+                                    <h1 id="result"></h1><span class="pt-4">(Threshold: {{campaign.threshold}}%)</span>
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-12 bb fields">
@@ -404,5 +408,13 @@
         var b_5 = parseInt($('#b_5').html());
         var b_6 = parseInt($('#b_6').html());
         $('#b_score').html(b_1+b_2+b_3+b_4+b_5+b_6);
+    var total = parseInt($('#tot_score').html());
+        if (total < {{campaign.threshold}}) {
+            $('#result').html("Fail");
+            $('#result').css("color","red");
+        } else {
+            $('#result').html("Pass");
+            $('#result').css("color","green");
+        }
 </script>
 {% endblock %}
