--- a/Qms_v3/templates/report/Spoiled.html
+++ b/Qms_v3/templates/report/Spoiled.html
@@ -15,6 +15,10 @@
                         <div class="col-md-12" align="center">
                             <h1>Audit Report - {{form.campaign}} ({{form.campaign_type}})</h1>
                         </div>
+                        <div class="col-md-12" style="display: inline-flex;">
+                            <h1>Result: </h1>
+                            <h1 id="result"></h1><span class="pt-4">(Threshold: {{campaign.threshold}}%)</span>
+                        </div>
                     </div>
                 </div>
 
@@ -361,5 +365,13 @@
     var t_2 = parseInt($('#t_2').html());
     var t_3 = parseInt($('#t_3').html());
     $('#t_score').html(t_1+t_2+t_3);
+    var total = parseInt($('#tot_score').html());
+        if (total < {{campaign.threshold}}) {
+            $('#result').html("Fail");
+            $('#result').css("color","red");
+        } else {
+            $('#result').html("Pass");
+            $('#result').css("color","green");
+        }
 </script>
 {% endblock %}
