--- a/Qms_v3/templates/report/Winopoly.html
+++ b/Qms_v3/templates/report/Winopoly.html
@@ -15,6 +15,10 @@
                                 <div class="col-md-12" align="center">
                                     <h1>Audit Report - {{form.campaign}} ({{form.campaign_type}})</h1>
                                 </div>
+                                <div class="col-md-12" style="display: inline-flex;">
+                                    <h1>Result: </h1>
+                                    <h1 id="result"></h1><span class="pt-4">(Threshold: {{campaign.threshold}}%)</span>
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-12 bb fields">
@@ -517,5 +521,13 @@
     var tp_2 = parseInt($('#tp_2').html());
     var tp_3 = parseInt($('#tp_3').html());
     $('#tp_score').html(tp_1+tp_2+tp_3);
+    var total = parseInt($('#tot_score').html());
+        if (total < {{campaign.threshold}}) {
+            $('#result').html("Fail");
+            $('#result').css("color","red");
+        } else {
+            $('#result').html("Pass");
+            $('#result').css("color","green");
+        }
 </script>
 {% endblock %}
