--- a/Qms_v3/templates/report/Fame.html
+++ b/Qms_v3/templates/report/Fame.html
@@ -614,7 +614,7 @@
                                     <h5>Total Score</h5>
                                 </div>
                                 <div class="col-md-6">
-                                    <h4 id="tot_score">{{form.overall_score}}</h4>
+                                    <h4 id="tot_score">{{form.overall_score}}%</h4>
                                 </div>
                                 <div class="col-md-12 mt-3" align="center">
                                     <button class="btn btn-info btn-lg" onclick="history.back()">Back</button>
