--- a/Qms_v3/templates/agent/Digital.html
+++ b/Qms_v3/templates/agent/Digital.html
@@ -403,6 +403,16 @@
                         </div>
                     </div>
                     {% endif %}
+                    {% if request.user.profile.emp_desi in mgr_list %}
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h4>Audit Duration</h4>
+                        </div>
+                        <div class="col-md-6">
+                            <p>{{form.audit_duration}}</p>
+                        </div>
+                    </div>
+                    {% endif %}
                     <div class="row mt-5 noborder">
                         <div class="col-md-6">
                             <h5>Total Score</h5>
