--- a/Qms_v3/templates/report/Amerisave.html
+++ b/Qms_v3/templates/report/Amerisave.html
@@ -302,6 +302,16 @@
                             <p>{{form.fail_type}}</p>
                         </div>
                     </div>
+                    {% if request.user.profile.emp_desi in mgr_list %}
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h4>Audit Duration</h4>
+                        </div>
+                        <div class="col-md-6">
+                            <p>{{form.audit_duration}}</p>
+                        </div>
+                    </div>
+                    {% endif %}
                     {% if form.emp_comments %}
                     <div class="row">
                         <div class="col-md-6">
